Change from yarn to npm.

--- a/package.json
+++ b/package.json
@@ -68,14 +68,13 @@
     "start": "node scripts/start.js",
     "start:webview": "node scripts/start-webview.js",
     "build": "node scripts/build.js",
-    "bundle": "yarn build && node scripts/plugin/bundle.js",
-    "lint": "yarn lint:plugin && yarn lint:webview",
+    "bundle": "npm run build && node scripts/plugin/bundle.js",
+    "lint": "npm run lint:plugin && npm run lint:webview",
     "lint:plugin": "eslint ./src/plugin/ -c ./config/plugin/eslint.js || true",
     "lint:webview": "eslint ./src/webview/ -c ./config/webview/eslint.js || true",
-    "lint-fix": "yarn lint-fix:plugin && yarn lint-fix:webview",
+    "lint-fix": "npm run lint-fix:plugin && npm run lint-fix:webview",
     "lint-fix:plugin": "eslint ./src/plugin/ --fix -c ./config/plugin/eslint.js || true",
     "lint-fix:webview": "eslint ./src/webview/ --fix -c ./config/webview/eslint.js || true",
-    "lint-fox": "node scripts/utils/fox.js && yarn lint-fix",
     "todos": "node scripts/utils/todos.js",
     "test": "jest ./__tests__"
   },
