--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "build-prod": "node scripts/build.js --prod",
     "todos": "node scripts/utils/todos.js",
     "link": "skpm-link"
   },
