--- a/src/plugin/tsconfig.json
+++ b/src/plugin/tsconfig.json
@@ -2,6 +2,7 @@
     "compilerOptions": {
         "module": "CommonJS",
         "target": "es6",
-        "lib": ["ES6"]
+        "lib": ["ES6"],
+        "types": []
     }
 }
