--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 node_modules/
 
 # Build folder
-Resources/
+/Resources/
 
 # Ignore knowledge base for now until cleaned up :D
 knowledge/
@@ -12,3 +12,5 @@ docs/.sass-cache
 docs/_site
 
 .rpt2_cache
+
+/*.sketchplugin
